...
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.156" />-->


    <TextView
        android:id="@+id/buildingNameReservation"
        android:layout_width="176dp"
        android:layout_height="40dp"
        android:text="building"
        android:textColor="@color/red"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/Indoor_Availability"
        android:layout_width="122dp"
        android:layout_height="23dp"
        android:layout_marginEnd="220dp"
        android:text="Indoor"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
...
